--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css"/>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8">
-	<script type="text/javascript" src="node_modules/paper/dist/paper-full.js"></script>
+	<script type="text/javascript" src="src/paper-full.js"></script>
 	<script type="module" canvas="canvas" src="src/index.js"></script>
 </head>
 <body>
